Disable update-gradle-wrapper.yml
Signed-off-by: Renato Mefi <gh@mefi.dev>

--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -1,7 +1,7 @@
 name: update-gradle-wrapper
 on:
   schedule:
-    - cron: "0 0 * * *"
+    # - cron: "0 0 * * *"
 jobs:
   update-gradle-wrapper:
     runs-on: ubuntu-20.04
